--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
     <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./assets/REF/CGBlack2.png">
-    <script script src="./assets/JS/function.js"></script>
 </head>
 <body>
     <nav class="navbar" id="navbar">
         <a class = "logowrap" id="logowrap" href="index.html"><img class="logo" src="./assets/REF/CGBlack2.png" alt="Logo">Colton Gelety</a>
         <ul class="nav-list">
+            <li class="nav-items"><a class="nav-text" href="index.html">Home</a></li>
+            <li class="nav-items"><a class="nav-text" href="about.html">About</a></li>
+            <li class="nav-items"><a class="nav-text" href="resume.html">Resume</a></li>
+            <li class="nav-items"><a class="nav-text" href="Contact.html">Contact</a></li>
+            <li class="nav-items" id="open-button"><a href="javascript:void(0);" class="nav-text" id="opentext" onclick="onClickOpen()"><i class="fa fa-bars"></i></a></li>
+        </ul>
+    </nav>
+    <nav class="sidebar-nav" id="sidebar-nav">
+        <ul class="sidebar-list">
+            <li id="close-button"><a href="javascript:void(0);" class="icon" onclick="onClickClose()"><i class="fa fa-times"></i></a></li>
             <li class="nav-items"><a class="nav-text" href="index.html">Home</a></li>
             <li class="nav-items"><a class="nav-text" href="about.html">About</a></li>
             <li class="nav-items"><a class="nav-text" href="resume.html">Resume</a></li>
@@ -81,6 +91,6 @@
     </div>
     
 
-
+    <script src="./assets/JS/function.js"></script>
 </body>
 </html>
